[package]
name = "molar_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "molar_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.21", features =["anyhow"] }
molar = {path = "../molar", version = "0.2", default-features = false}
numpy = {version = "0.21", features = ["nalgebra"]}
triomphe = "0.1"
